# ChangeLog for dev-ruby/ruby-saml
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Jul 2014; Hans de Graaff <graaff@gentoo.org> ruby-saml-0.7.3-r1.ebuild,
  ruby-saml-0.8.1.ebuild:
  Add ruby20, ruby21.

  01 Jul 2014; Hans de Graaff <graaff@gentoo.org> -ruby-saml-0.7.2.ebuild:
  Cleanup.

*ruby-saml-0.7.3-r1 (03 Apr 2014)

  03 Apr 2014; Hans de Graaff <graaff@gentoo.org> -ruby-saml-0.7.3.ebuild,
  +ruby-saml-0.7.3-r1.ebuild:
  Fix nokogiri dependency in gemspec to be compatible with newer versions.

*ruby-saml-0.8.1 (28 Feb 2014)

  28 Feb 2014; Hans de Graaff <graaff@gentoo.org> +ruby-saml-0.8.1.ebuild:
  Version bump. New slot due to naming change.

*ruby-saml-0.7.3 (21 Feb 2014)

  21 Feb 2014; Hans de Graaff <graaff@gentoo.org> +ruby-saml-0.7.3.ebuild:
  Version bump.

  21 Feb 2014; Hans de Graaff <graaff@gentoo.org> -ruby-saml-0.6.0.ebuild,
  -ruby-saml-0.7.1.ebuild:
  Cleanup.

*ruby-saml-0.7.2 (01 Mar 2013)

  01 Mar 2013; Hans de Graaff <graaff@gentoo.org> +ruby-saml-0.7.2.ebuild:
  Version bump.

*ruby-saml-0.7.1 (14 Feb 2013)

  14 Feb 2013; Hans de Graaff <graaff@gentoo.org> +ruby-saml-0.7.1.ebuild:
  Version bump.

*ruby-saml-0.6.0 (25 Jan 2013)

  25 Jan 2013; Hans de Graaff <graaff@gentoo.org> +ruby-saml-0.6.0.ebuild,
  +metadata.xml:
  Initial import.
