@@ -1,2 +1,3 @@
 DIST ruby-saml-0.7.3.gem 55296 SHA256 4de4c947a89e5e56b344faba795958026c5ba96e4b63053555b44b84df018579 SHA512 1fa14882bcb584bf9f35036fd69064794d345c01f46cc589c0370652b262ed86dbdaf3ec99edca89b5be75460e5fb26e49deed50432edc2d4a3690cd4443082e WHIRLPOOL 8b23830eb5f8bf9fe857622e911631be4191f99b0bee5c61a462f9253dc5a90a759e632858bc7a54f76da39c24f57722776ee9206e0ffcd5972a647d3510da62
 DIST ruby-saml-0.8.1.gem 55296 SHA256 4151c0d496034b712377085a91baac4b5c826b1e56271163ce811f6ab1dea400 SHA512 5fd6154aa128e6479261741ec666759f8031faf216b705fbfa76928dcb8c0ff6068f929a9928b8c04d45cb24dce7b3c30acce38154c2b8f3fecdcb057d9a1cee WHIRLPOOL 84501b6d6066659550d1396367e3d31d09141d5f6dca3149df947e58212abf1f3ec27e763214c0177449292b1a7bdadbd63f635085ed175cd562eae23101bae2
+DIST ruby-saml-0.8.2.gem 55808 SHA256 a101bc0d86503d12513b8be66a25967c71b189de02d1bd0fa6969e3bdee57597 SHA512 a199202d5a38a85b23e4a04ebb95abc715d303bd5eb45e2538088b7408a8977e9614c1fcfcadf65602b25043d6a443ea767bc145a652a7b72ffd878343c596f6 WHIRLPOOL 1a95ace4903a91470fe93f6fce3245da99ea7e54e905b0964afc1223197b8df8f789f77e5419e6f871362656b96f8ba408704c3956d751c5aa9b7d0a39fb7499
